--- a/nova-components/NovaTheme/resources/css/custom.css
+++ b/nova-components/NovaTheme/resources/css/custom.css
@@ -2936,6 +2936,7 @@ body #nova .side_navigation_menu_container.pt-header .dashboard_link.router-link
     color: #fff
 }
 
+body #nova .side_navigation_menu_container.pt-header .dashboard_link.router-link-active svg,
 body #nova .side_navigation_menu_container.pt-header .dashboard_link.router-link-active img.side_nav_icon {
     filter: brightness(0) invert(1)
 }
@@ -3007,6 +3008,7 @@ body #nova .side_navigation_menu_container .sidemenu .sidebar-dropdown .nav_inne
     padding: 0 3px
 }
 
+body #nova .side_navigation_menu_container .sidemenu .sidebar-dropdown .nav_inner_li a.router-link-active svg,
 body #nova .side_navigation_menu_container .sidemenu .sidebar-dropdown .nav_inner_li a.router-link-active img {
     filter: brightness(0) invert(1)
 }
@@ -3026,6 +3028,7 @@ body #nova .side_navigation_menu_container .sidemenu .sidebar-dropdown .nav_inne
     padding: 0 3px
 }
 
+body #nova .side_navigation_menu_container .sidemenu .sidebar-dropdown .nav_inner_li a:hover:not(.router-link-active) svg,
 body #nova .side_navigation_menu_container .sidemenu .sidebar-dropdown .nav_inner_li a:hover:not(.router-link-active) img {
     filter: brightness(0) invert(1)
 }
