--- a/public/nova/nova-theme/theme.css
+++ b/public/nova/nova-theme/theme.css
@@ -6,7 +6,7 @@
     --primary-30: rgba(60, 75, 79, 0.3);
     --primary-10: rgba(60, 75, 79, 0.1);
     --logo: #252d37;
-    --sidebar-icon: #fff;
+    --sidebar-icon: #707070;
 }
 
 .bg-grad-sidebar {
