--- a/public/css/my_app.css
+++ b/public/css/my_app.css
@@ -1,1 +1,1 @@
-.z--1{z-index:-1!important}.content-box{height:calc(100vh - 60px);overflow:scroll}
+.z--1{z-index:-1!important}.content-box{height:calc(100vh - 60px);overflow:auto}.content:not(.content-box){overflow:hidden!important}.toggle-sidebar-hidden .w-sidebar{display:none!important;height:100%;overflow:auto;padding-top:5.5rem!important;position:fixed;z-index:1000}.toggle-sidebar-hidden .content:not(.content-box){max-width:none!important}
